# PMIpred

./: README.md  pyproject.toml
scripts/: .PMIpred_peptide.py.swp  PMIpred_peptide_bulk.py  output.csv  plotting_functions.py
