[project]
name = "pmipred"
version = "0.1.0"
description = "A fork of the PMIPred module focussed on bulk processing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "keras==2.15.0",
    "matplotlib>=3.10.6",
    "polars>=1.33.0",
    "scipy>=1.15.3",
    "tensorflow==2.15.0",
    "tqdm>=4.67.1",
]
